# smart-contract-examples

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json
.github/: CODEOWNERS
EmojiGotchi/: .gitignore  README.md
add-functions-to-project/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
automation-gas-threshold/: README.md  index.js  package.json
ccip-offchain/: README.md
counting-svg/: README.md  counting-svg.sol
dadjokes-onchain/: README.md
data-streams/data-streams-solana-integration/sdk-off-chain/: Cargo.toml
data-streams/data-streams-solana-integration/sdk-off-chain/src/: lib.rs  verifier_client.rs
datafeeds-in-svelte/: README.md  package-lock.json  package.json
dynamic-nft/: 1_starter.sol  2_complete.sol  README.md
dynamic-nft-3-services/: SuperDynamicNFT.sol
external-adapters/: .pnp.cjs  README.md  jest.config.ts  package.json
functions-examples/: .gitignore  LICENSE  README.md  package-lock.json  package.json
keepers-minimal/: README.md  hardhat.config.ts  package.json
lottery/: .env.example  .prettierrc  README.md  hardhat.config.ts  helper-hardhat-config.ts  package.json
minting and burning/: Readme.md
my-crypto-coin/: go.mod
my-crypto-wallet/: 01_newAccount.js  02_restoreWallet.js  03_send.js  package.json
pricefeed-golang/: .env.example  README.md  go.mod  go.sum  main.go
quiz-game/: .gitignore  README.md
random-svg-nft/: .env.example  .gitignore  README.md  hardhat.config.ts  package.json
self-automating-contract/: README.md  SelfAutomatingContract.sol
(+588 files in other folders)
