[package]
name = "sdk-off-chain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
solana-sdk = "2.1.6"
solana-client = "2.1.6"
chainlink_solana_data_streams = { git = "https://github.com/smartcontractkit/chainlink-solana", branch = "develop" }
base64 = "0.22.1"
solana-transaction-status = "2.1.6"
snap = "1.1.1"